--- a/style.css
+++ b/style.css
@@ -20,19 +20,13 @@
     
 }
 
-
-
 .header-left-section h1{
 
     font-size: 24px;
     color: #F9FAF8;
-    margin-left: 25vh;
+    margin-left: 33vh;
 }
 
-.header-right-section{
-
-   
-}
 
 .header-right-section .links{
 
@@ -47,8 +41,63 @@
     text-decoration: none;
     margin-left: 10vh;
     
-  
 }
 
+/*----------------Hero--------------------*/
+
+
+.hero{
+    background-color: #1f2937;
+    display: flex;
+    
+}
+.hero div{
+
+    border: 1px solid #1f2937;
+}
+
+.hero-left-section{
+    width: 50%;
+    padding: 15vh 5vh 15vh 35vh;
+}
+
+.hero-left-section h1{
+
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: bolder;
+}
+
+.hero-left-section p{
+
+    font-size: 18px;
+    color: #E5E7EB;
+
+}
+
+.hero-left-section button{
+
+    background-color: #3882F6;
+    color: #F9FAF8;
+    border: 0;
+    margin-top: 1vh;
+    padding: 10px 30px 10px 30px;
+    border-radius: 8px;
+    font-size: 18px;
+}
+
+.hero-left-section button:hover{
+
+    background-color:  #F9FAF8;
+    color: #3882F6;
+    
+}
+
+
+.hero-right-section{
+
+    width: 50%;
+    padding: 10vh 35vh 10vh 0vh
+}
 
 
