Finished the info-section

--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@
 .info-section{
 
     background-color: #F9FAF8;
+    height: 500px;
     
 }
 
@@ -117,21 +118,42 @@
     font-style: normal;
 }
 
-.info-sub-section {
+.pic-section {
 
     display: flex;
     justify-content: center;
  
 }
 
-.info-sub-section div{
+.pic-section div{
 
-   
     height: 25vh;
     border: 4px solid #3882F6;
-    margin: 4vh;
+    margin: 0vh 4vh 0vh 4vh;
     width: 25vh;
     border-radius: 10px;
 }
 
+.pic-section img{
 
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+}
+
+.info-sub-section{
+
+    display: flex;
+    justify-content: center;  
+}
+
+.info-sub-section div{
+
+    height: 5vh;
+    margin: 1vh 4vh 0vh 4vh;
+    width: 25vh;
+    align-items: center;
+    border: 4px solid #F9FAF8;
+    text-align: center;
+    
+}
